--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -1,11 +1,31 @@
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Expense Manager</title>
+        <style>
+            body {
+                font-family: sans-serif;
+            }
+
+            * {
+                box-sizing: border-box;
+            }
+
+            a,
+            a:link,
+            a:focus,
+            a:visited,
+            a:hover,
+            a:active {
+                color: inherit;
+                text-decoration: none;
+            }
+        </style>
     </head>
     <body>
+        <h1>Expense Manager</h1>
         <div id="app"></div>
     </body>
 </html>
