--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -4,13 +4,19 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Expense Manager</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i" rel="stylesheet">
         <style>
             body {
-                font-family: sans-serif;
+                background-color: #33434B;
+                color: #f5f5f5;
+                font-family: 'Roboto', sans-serif;
             }
 
-            * {
+            *:not(body) {
                 box-sizing: border-box;
+                color: inherit;
+                font-family: inherit;
+                font-weight: normal;
             }
 
             a,
