--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -4,34 +4,16 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Expense Manager</title>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
         <style>
+            html,
             body {
-                background-color: #33434B;
-                color: #f5f5f5;
-                font-family: 'Roboto', sans-serif;
-            }
-
-            *:not(body) {
-                box-sizing: border-box;
-                color: inherit;
-                font-family: inherit;
-                font-weight: normal;
-            }
-
-            a,
-            a:link,
-            a:focus,
-            a:visited,
-            a:hover,
-            a:active {
-                color: inherit;
-                text-decoration: none;
+                margin: 0;
+                padding: 0;
             }
         </style>
     </head>
     <body>
-        <h1>Expense Manager</h1>
         <div id="app"></div>
     </body>
 </html>
